fix: client - the header appeared over the popup despite of the higher popup z-index so I wrapped the popup into createPortal from react-dom

--- a/client/src/components/reusable/order-product-item/OrderProductItem.module.scss
+++ b/client/src/components/reusable/order-product-item/OrderProductItem.module.scss
@@ -3,11 +3,9 @@
 .order-product-item {
     display: flex;
     flex-direction: column;
-    // flex: 1 1 30%;
     gap: 1.5rem;
     padding: 1rem;
     border: 1px solid vars.$light-grey;
-    border-radius: 0.5rem;
     background: vars.$white;
 
     .product-details {
